fix slider overflow bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -698,14 +698,18 @@ body {
 .imageSlider__slider {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   gap: 3rem;
-  min-height: 22rem;
+  overflow: hidden;
+  width: 100%;
+  height: 28rem;
 }
 .imageSlider__slide {
   box-shadow: 0px 0px 12px 1px rgba(30, 32, 32, 0.4);
   padding: 1.5rem;
+  width: 92%;
+  min-height: 22rem;
 }
 .imageSlider__image {
   float: left;
