--- a/sass/components/_imageSlider.scss
+++ b/sass/components/_imageSlider.scss
@@ -11,17 +11,28 @@
     &__slider {
         display: flex;
         flex-direction: column;
-        justify-content: flex-start;
+        justify-content: center;
         align-items: center;
 
         gap: 3rem;
 
-        min-height: 22rem;
+        overflow: hidden;
+
+        width: 100%;
+        height: 28rem;
+        
+
+        
+
+       
     }
 
     &__slide {
         box-shadow: 0px 0px 12px 1px rgba($cp-dark, .4);
         padding: 1.5rem;
+        width: 92%;
+        min-height: 22rem;
+
 
     }
 
